<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".View.FilterActivity"
    tools:showIn="@layout/activity_filter"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@color/white">
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".View.FilterActivity"
    tools:showIn="@layout/activity_filter"
    android:fillViewport="true">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="@dimen/filter_main_linear_PT"
        android:paddingLeft="@dimen/filter_main_linear_PL">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/noofbedrooms"
            android:textColor="@color/black"
            android:textSize="@dimen/general_textsize_fourteen"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/filter_linear_layout_MT">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/grey"
                android:gravity="center"
                android:padding="@dimen/padding_inner_linear_layout"
                android:id="@+id/linear_2bhk">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/twobhk"
                    android:textColor="@color/black"
                    android:id="@+id/textview_2bhk"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/grey"
                android:gravity="center"
                android:padding="@dimen/padding_inner_linear_layout"
                android:layout_marginLeft="@dimen/margin_between_linear"
                android:layout_marginRight="@dimen/margin_between_linear"
                android:id="@+id/linear_3bhk">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/textview_3bhk"
                    android:text="@string/threebhk"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/grey"
                android:gravity="center"
                android:layout_marginRight="@dimen/margin_between_linear"
                android:padding="@dimen/padding_inner_linear_layout"
                android:id="@+id/linear_4bhk">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/fourbhk"
                    android:id="@+id/textview_4bhk"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/property_type"
            android:textColor="@color/black"
            android:textSize="@dimen/general_textsize_fourteen"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/filter_second_linear_layout_MT"/>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/filter_linear_layout_MT">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:background="@color/grey"
                android:gravity="center"
                android:padding="@dimen/padding_inner_linear_layout"
                android:id="@+id/linear_apartment">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/apartment"
                    android:id="@+id/textview_apartment"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:background="@color/grey"
                android:gravity="center"
                android:padding="@dimen/padding_inner_linear_layout"
                android:layout_marginLeft="@dimen/margin_between_linear"
                android:id="@+id/linear_independent"
                android:layout_marginRight="@dimen/margin_between_linear">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/textview_independent"
                    android:text="@string/independenthouse"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/grey"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/margin_between_linear"
            android:padding="@dimen/padding_inner_linear_layout"
            android:id="@+id/linear_builder">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/textview_builder"
                android:text="@string/builder"
                android:textColor="@color/black"/>
        </LinearLayout>


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/furnished"
            android:textColor="@color/black"
            android:textSize="@dimen/general_textsize_fourteen"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/filter_second_linear_layout_MT"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/filter_linear_layout_MT">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/grey"
                android:gravity="center"
                android:padding="@dimen/padding_inner_linear_layout"
                android:id="@+id/linear_full">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/full"
                    android:id="@+id/textview_full"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/grey"
                android:gravity="center"
                android:padding="@dimen/padding_inner_linear_layout"
                android:id="@+id/linear_semi"
                android:layout_marginLeft="@dimen/margin_between_linear"
                android:layout_marginRight="@dimen/margin_between_linear">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/semi"
                    android:id="@+id/textview_semi"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <!--<LinearLayout-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@color/grey"-->
                <!--android:gravity="center"-->
                <!--android:layout_marginRight="@dimen/margin_between_linear"-->
                <!--android:padding="@dimen/padding_inner_linear_layout"-->
                <!--android:id="@+id/linear_none">-->
                <!--<TextView-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:text="@string/none"-->
                    <!--android:id="@+id/textview_none"-->
                    <!--android:textColor="@color/black"/>-->
            <!--</LinearLayout>-->
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/button_green_selected"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:id="@+id/apply_filters"
        android:layout_marginTop="20dp"
        android:text="@string/apply_filters"/>
</LinearLayout>